# superRA

./: .gitattributes  .gitignore  .version-bump.json  CLAUDE.md  GEMINI.md  PLAN.md  README.md  RELEASE-NOTES.md  RESULTS.md  SEMANTIC_MERGE.md  gemini-extension.json  package.json
.claude-plugin/: marketplace.json  plugin.json
.plan/: task.md  (+1 more)
skills/research-project-setup/template/: .gitignore  CLAUDE.md  README.md  overleaf-sync  pyproject.toml  references.bib  setup_mac.sh
skills/research-project-setup/template/.claude/: settings.json
skills/research-project-setup/template/.codex/: config.toml
skills/research-project-setup/template/Paper/: manuscript.tex
skills/research-project-setup/template/Slides/: slides.tex
skills/task-system/: .gitignore  SKILL.md  pyproject.toml
skills/task-system/references/: commands.md  internals.md  planning.md  task-file-contract.md
skills/task-system/scripts/: __init__.py  _comments.py  _task_io.py  _worktree_discovery.py  cli.py  dashboard_artifact_workflow.py  plan_dashboard.py  plan_migrate.py  task_add_result.py  task_check.py  task_comment.py  task_create.py  task_hook.py  task_link.py  task_query.py  task_read.py  task_rename.py  task_update.py  test_cli.py  test_dashboard.py  test_multi_worktree.py  test_task_system.py  test_worktree_selector.py  wrapper_resolver.py
skills/task-system/scripts/templates/: base.html  dag.html  kanban.html  nav_children.html  nav_node.html  summary_bar.html  superra-dashboard-artifact.yml  task_node.html
skills/task-system/scripts/tests/: test_comments.py  test_state_preservation.py
(+1178 files in other folders)
