[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "superra-task-system"
version = "0.1.2"
description = "Filesystem task tree CLI and dashboard for superRA"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "jinja2",
  "pyyaml",
  "uvicorn[standard]",
  "watchfiles",
]

[project.scripts]
superra = "superra_task_system.cli:main"

[tool.setuptools]
packages = ["superra_task_system"]
package-dir = {superra_task_system = "scripts"}

[tool.setuptools.package-data]
superra_task_system = [
  "templates/*.html",
  "templates/*.yml",
  "vendor/*.css",
  "vendor/*.js",
  "vendor/*.md",
  "vendor/fonts/*.woff2",
]
